--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
 .task-text {
     width: 56%;
     display: inline-block;
-    flex-grow: 1
+    flex-grow: 1;
 }
 .add-task__row {
     display: flex;
@@ -119,7 +119,7 @@ li > * {
     width: 226px;
 }
 .task > .task-input {
-    width: 226px
+    width: 226px;
 }
 .btn-delete__img {
     height: 2em;
@@ -132,18 +132,18 @@ li > * {
 
 /* Completed */
 .completed-task__list .task-text {
-    text-decoration: line-through
+    text-decoration: line-through;
     color: #888;
 }
 
 /* Edit Task */
 .task .task-input {
-    display: none
+    display: none;
 }
 
 .task-edit .task-input {
     display: inline-block;
-    width: 224px
+    width: 224px;
 }
 
 .task-edit .task-text {
