refactor(extended-2.1): update html file

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 }
 
 @media (max-width: 768px) {
-  .header { 
+  .header {
     text-align: center;
   }
 }
@@ -57,7 +57,7 @@ button {
   cursor: pointer;
 }
 .task-btn:hover {
-  color: #3a3A3a;
+  color: #3a3a3a;
 }
 /* Heading */
 
